@@ -175,6 +175,7 @@ libspectrum_signed_byte specdrum_dac
 
 int spectranet_active
 int spectranet_paged
+int spectranet_paged_via_io
 int spectranet_programmable_trap_active
 int spectranet_programmable_trap_msb
 int spectranet_all_traps_disabled
